--- a/ajout.html
+++ b/ajout.html
@@ -28,10 +28,10 @@
             <input type="number" name="diam_tronc" id="diam_tronc">
 
             <label for="lat">latitude de l'arbre (X)</label>
-            <input type="number" name="lat" id="lat">
+            <input type="number" name="lat" id="lat" step="any">
 
             <label for="longi">longitude de l'arbre (Y)</label>
-            <input type="number" name="longi" id="longi">
+            <input type="number" name="longi" id="longi" step="any">
 
             <label for="remarquable">arbre remarquable</label>
             <input type="checkbox" name="remarquable" id="remarquable">
