--- a/ajout.html
+++ b/ajout.html
@@ -11,8 +11,13 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="">
+
+        <script src="js/ajax.js" defer></script>
+        <script src="js/arbres.js" defer></script>
+
     </head>
     <body>
+        
 
         <form action="" method="POST">
             <label for="espece">Espece de l'arbre</label>
