--- a/ajout.html
+++ b/ajout.html
@@ -12,6 +12,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="">
 
+        <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+        
         <script src="js/ajax.js" defer></script>
         <script src="js/arbres.js" defer></script>
 
