--- a/ajout.html
+++ b/ajout.html
@@ -13,7 +13,7 @@
         <link rel="stylesheet" href="">
 
         <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-        
+
         <script src="js/ajax.js" defer></script>
         <script src="js/arbres.js" defer></script>
 
@@ -71,6 +71,10 @@
 
 
             <input type="submit" value="Ajouter">
+
+        </form>
+
+        <table id="tableArbres"></table>
         
         <script src="" async defer></script>
     </body>
