--- a/ajout.html
+++ b/ajout.html
@@ -70,7 +70,7 @@
             </select>
 
 
-            <input type="submit" value="Ajouter">
+            <input type="submit" value="Ajouter" id="ajouterbtn">
 
         </form>
 
