supp methode form

--- a/ajout.html
+++ b/ajout.html
@@ -20,7 +20,7 @@
     </head>
     <body>
     
-        <form action="" method="POST">
+        <form>
             <label for="espece">Espece de l'arbre</label>
             <input type="text" name="espece" id="espece">
 
