--- a/ajout.html
+++ b/ajout.html
@@ -32,7 +32,7 @@
             </select>
 
             <select id="fk_stadedev" name="fk_stadedev" required>
-
+                <option value="0">fk_stadedev</option>
             </select>
 
             <select id="fk_port" name="fk_port" required>
