--- a/ajout.html
+++ b/ajout.html
@@ -26,9 +26,9 @@
             <input type="number" id="diam_tronc" name="diam_tronc" placeholder="Diamètre du Tronc" required>
             <input type="number" id="lat" name="lat" placeholder="Latitude" required>
             <input type="number" id="longi" name="longi" placeholder="Longitude" required>
+            
             <select id="fk_arb_etat" name="fk_arb_etat" required>
-                <option value="1">EN PLACE</option>
-                <option value="2">ABATTU</option>
+                <option value="0">fk_arb_etat</option>
             </select>
 
             <select id="fk_stadedev" name="fk_stadedev" required>
@@ -36,13 +36,13 @@
             </select>
 
             <select id="fk_port" name="fk_port" required>
-                <option value="1">etete</option>
-                <option value="2">cepee</option>
+                <option value="0">fk_port</option>
+
             </select>
 
             <select id="fk_pied" name="fk_pied" required>
-                <option value="1">Terre</option>
-                <option value="2">gazon</option>
+                <option value="0">fk_pied</option>
+
             </select>
 
             <input type="text" id="remarquable" name="remarquable" placeholder="Remarquable" required>
