--- a/index_accueil.html
+++ b/index_accueil.html
@@ -14,9 +14,8 @@
         </div>
 
         <div class="right_nav">
-
                 <a href="#">Accueil</a>
-                <a href="#">Carte</a>
+                <a href="carte.html">Carte</a>
                 <a href="#">Ajouter un arbre</a>
                 <a href="#">Prédiction</a>
 
