--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     </head>
     <body>
         <a href="ajout.html">clique pour l'ajout</a>
-        
+        <a href="carte.html">carte</a>
         <script src="" async defer></script>
     </body>
 </html>
