--- a/carte.html
+++ b/carte.html
@@ -5,11 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>affichage de la carte</title>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-
+    <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
     <script src="js/ajax.js" defer></script>
     <script src="js/map.js" defer></script>
 </head>
 <body>
     <h1>Requête AJAX vers PHP</h1>
+
+
+    <div id="map" style="width: 100%; height: 600px;"></div>
 </body>
 </html>
