--- a/tab.html
+++ b/tab.html
@@ -31,6 +31,9 @@
         <tbody>
         </tbody>
     </table>
+    <div id="pagination">
+        <!-- Boutons de pagination seront ajoutés ici dynamiquement -->
+    </div>
 
 </body>
 </html>
