--- a/carte.html
+++ b/carte.html
@@ -9,8 +9,25 @@
     <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
     <script src="js/ajax.js" defer></script>
     <script src="js/map.js" defer></script>
+
+    <link rel="stylesheet" href="assets/style.css">
+
 </head>
 <body>
+    <nav>
+        <div class="left_nav">
+            <img src="assets/img/logo_web_project.jpg" alt="ISEN Logo" class="logo" width="60px">
+        </div>
+
+        <div class="right_nav">
+            <a href="#">Accueil</a>
+            <a href="carte.html">Carte</a>
+            <a href="#">Ajouter un arbre</a>
+            <a href="#">Prédiction</a>
+            <button class="login-btn">Se connecter</button>
+        </div> 
+    </nav>
+    
     <h1>Requête AJAX vers PHP</h1>
 
 
