--- a/index_accueil.html
+++ b/index_accueil.html
@@ -14,7 +14,7 @@
         </div>
 
         <div class="right_nav">
-            <a href="#">Accueil</a>
+            <a href="index_accueil.html">Accueil</a>
             <a href="carte.html">Carte</a>
             <a href="#">Ajouter un arbre</a>
             <a href="#">Prédiction</a>
