--- a/carte.html
+++ b/carte.html
@@ -27,18 +27,19 @@
             <button class="login-btn">Se connecter</button>
         </div> 
     </nav>
+    <main>
+        <h1>Requête AJAX vers PHP</h1>
 
-    <h1>Requête AJAX vers PHP</h1>
-
-    <div class="carte_content">
-        <div id="map" style="width: 50%; height: 600px;"></div>
-        <div class="carte_clusters">
-            <h2>Prédiction des clusters</h2>
-            <div class="cluster_card">
-                <input type="text" placeholder="Nombre de clusters">
-                <button class="cta-btn">Prédire</button>
+        <div class="carte_content">
+            <div id="map" style="width: 50%; height: 600px;"></div>
+            <div class="carte_clusters">
+                <h2>Prédiction des clusters</h2>
+                <div class="cluster_card">
+                    <input type="text" placeholder="Nombre de clusters">
+                    <button class="cta-btn">Prédire</button>
+                </div>
             </div>
         </div>
-    </div>
+    </main>
 </body>
 </html>
