--- a/carte.html
+++ b/carte.html
@@ -28,7 +28,10 @@
         </div> 
     </nav>
     <main>
-        <h1>Requête AJAX vers PHP</h1>
+        <div class="text_">
+            <h1>Visualisation des arbres</h1>
+            <p>Voici la carte et le tableau des arbres renseignés a Saint-Quentin</p>
+        </div>content
 
         <div class="carte_content">
             <div id="map" style="width: 50%; height: 600px;"></div>
@@ -41,5 +44,15 @@
             </div>
         </div>
     </main>
+
+    <footer>
+        <div class="footer_left">
+            <p>Copyright © 2024 Helary Ewen | Timoté Chimienti. All rights reserved.</p>
+        </div>
+
+        <div class="footer-logos">
+            <img src="assets/img/logo_ISEN.png" alt="ISEN Logo">
+        </div>
+    </footer>
 </body>
 </html>
