--- a/carte.html
+++ b/carte.html
@@ -31,7 +31,7 @@
         <div class="text_">
             <h1>Visualisation des arbres</h1>
             <p>Voici la carte et le tableau des arbres renseignés a Saint-Quentin</p>
-        </div>content
+        </div>
 
         <div class="carte_content">
             <div id="map" style="width: 50%; height: 600px;"></div>
@@ -51,7 +51,7 @@
         </div>
 
         <div class="footer-logos">
-            <img src="assets/img/logo_ISEN.png" alt="ISEN Logo">
+            <img src="assets/img/logo_ISEN.png" alt="ISEN Logo" width="60px">
         </div>
     </footer>
 </body>
