--- a/carte.html
+++ b/carte.html
@@ -28,7 +28,7 @@
         </div> 
     </nav>
     <main>
-        <div class="text_">
+        <div class="text_content">
             <h1>Visualisation des arbres</h1>
             <p>Voici la carte et le tableau des arbres renseignés a Saint-Quentin</p>
         </div>
