--- a/tab.html
+++ b/tab.html
@@ -31,9 +31,10 @@
         <tbody>
         </tbody>
     </table>
-    <div id="pagination">
-        <!-- Boutons de pagination seront ajoutés ici dynamiquement -->
+    <div class="pagination">
+        <button id="prev-page">Page précédente</button>
+        <span id="current-page">1</span>
+        <button id="next-page">Page suivante</button>
     </div>
-
 </body>
 </html>
