--- a/tab.html
+++ b/tab.html
@@ -31,10 +31,10 @@
         <tbody>
         </tbody>
     </table>
-    <div class="pagination">
-        <button id="prev-page">Page précédente</button>
-        <span id="current-page">1</span>
-        <button id="next-page">Page suivante</button>
+
+    <div id="pagination" class="pagination">
+        <!-- Les boutons de pagination seront générés dynamiquement -->
     </div>
+    
 </body>
 </html>
