--- a/carte.html
+++ b/carte.html
@@ -9,6 +9,7 @@
     <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
     <script src="js/ajax.js" defer></script>
     <script src="js/map.js" defer></script>
+    <script src="js/tab.js" defer></script>
 
     <link rel="stylesheet" href="assets/style.css">
 
@@ -41,6 +42,33 @@
                     <input type="text" placeholder="Nombre de clusters">
                     <button class="cta-btn">Prédire</button>
                 </div>
+            </div>
+        </div>
+
+        <div class="tabArbre">
+            <table id="arbres">
+                <thead>
+                    <tr>
+                        <th>id</th>
+                        <th>espece</th>
+                        <th>haut_tot</th>
+                        <th>haut_tronc</th>
+                        <th>diam_tronc</th>
+                        <th>fk_arb_etat</th>
+                        <th>fk_stadedev</th>
+                        <th>fk_port</th>
+                        <th>fk_pied</th>
+                        <th>remarquable</th>
+                        <th>lat</th>
+                        <th>longi</th>
+                    </tr>
+                </thead>
+                <tbody>
+                </tbody>
+            </table>
+        
+            <div id="pagination" class="pagination">
+                <!-- Les boutons de pagination seront générés dynamiquement -->
             </div>
         </div>
     </main>
