--- a/carte.html
+++ b/carte.html
@@ -39,8 +39,8 @@
             <div class="carte_clusters">
                 <h2>Prédiction des clusters</h2>
                 <div class="cluster_card">
-                    <input type="text" placeholder="Nombre de clusters">
-                    <button class="cta-btn">Prédire</button>
+                    <input type="text" placeholder="Nombre de clusters" id="nb_clust">
+                    <button class="cta-btn" id="predClusterBtn">Prédire</button>
                 </div>
             </div>
         </div>
