--- a/carte.html
+++ b/carte.html
@@ -38,7 +38,8 @@
             <div id="map" style="width: 40%; height: 500px;"></div>
             <div class="carte_clusters">
                 <h2>Prédiction des clusters</h2>
-                <p>Vous souhaitez classer les arbres en fonction de leur hauteur ? C'est maintenant possible à l'aide du clustering</p>
+                <p>Vous souhaitez classer les arbres en fonction de leur hauteur ?</p>
+                <p>C'est maintenant possible à l'aide du clustering</p>
                 <div class="cluster_card">
                     <input type="text" placeholder="Nombre de clusters" id="nb_clust">
                     <button class="cta-btn" id="predClusterBtn">Prédire</button>
