--- a/carte.html
+++ b/carte.html
@@ -12,7 +12,8 @@
     <script src="js/tab.js" defer></script>
 
     <link rel="stylesheet" href="assets/style.css">
-
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </head>
 <body>
     <nav>
@@ -48,7 +49,7 @@
         </div>
 
         <div class="tabArbre">
-            <table id="arbres">
+            <table id="arbres" class="table table-striped">
                 <thead>
                     <tr>
                         <th>id</th>
