--- a/ajout.html
+++ b/ajout.html
@@ -19,6 +19,20 @@
 
     </head>
     <body>
+        <nav>
+            <div class="left_nav">
+                <img src="assets/img/logo_web_project.jpg" alt="ISEN Logo" class="logo" width="60px">
+            </div>
+    
+            <div class="right_nav">
+                <a href="index_accueil.html">Accueil</a>
+                <a href="carte.html">Carte</a>
+                <a href="ajout.html">Ajouter un arbre</a>
+                <a href="#">Prédiction</a>
+                <button class="login-btn">Se connecter</button>
+            </div> 
+        </nav>
+
         <form id="ajoutArbre">
             <input type="text" id="espece" name="espece" placeholder="Espèce" required>
             <input type="number" id="haut_tot" name="haut_tot" placeholder="Hauteur Totale" required>
@@ -48,6 +62,17 @@
             <input type="text" id="remarquable" name="remarquable" placeholder="Remarquable" required>
             <button type="submit">Ajouter l'Arbre</button>
         </form>        
+
+        <footer>
+            <div class="footer_left">
+                <p>Copyright © 2024 Helary Ewen | Timoté Chimienti. All rights reserved.</p>
+            </div>
+    
+            <div class="footer-logos">
+                <img src="assets/img/logo_ISEN.png" alt="ISEN Logo">
+            </div>
+        </footer>
+
         <script src="" async defer></script>
     </body>
 </html>
