--- a/carte.html
+++ b/carte.html
@@ -24,7 +24,7 @@
         <div class="right_nav">
             <a href="index_accueil.html">Accueil</a>
             <a href="carte.html">Carte</a>
-            <a href="#">Ajouter un arbre</a>
+            <a href="ajout.html">Ajouter un arbre</a>
             <a href="#">Prédiction</a>
             <button class="login-btn">Se connecter</button>
         </div> 
