--- a/ajout.html
+++ b/ajout.html
@@ -10,7 +10,7 @@
         <title>ajout d'un arbre</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="">
+        <link rel="stylesheet" href="assets/style.css">
 
         <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
