--- a/carte.html
+++ b/carte.html
@@ -48,6 +48,8 @@
             </div>
         </div>
 
+        <a href="map.html" class="cta-btn">Voir la carte</a>
+
         <div class="tabArbre">
             <table id="arbres" class="table table-striped">
                 <thead>
