--- a/carte.html
+++ b/carte.html
@@ -48,7 +48,7 @@
             </div>
         </div>
 
-        <a href="map.html" class="cta-btn">Voir la carte</a>
+        <!-- <a href="map.html" class="cta-btn" target="_blank">Voir la carte</a> -->
 
         <div class="tabArbre">
             <table id="arbres" class="table table-striped">
