--- a/ajout.html
+++ b/ajout.html
@@ -69,7 +69,7 @@
             </div>
     
             <div class="footer-logos">
-                <img src="assets/img/logo_ISEN.png" alt="ISEN Logo">
+                <img src="assets/img/logo_ISEN.png" alt="ISEN Logo" width="60px">
             </div>
         </footer>
 
