--- a/index_accueil.html
+++ b/index_accueil.html
@@ -36,7 +36,7 @@
         </div>
 
         <div class="footer-logos">
-            <img src="assets/img/logo_ISEN.png" alt="ISEN Logo">
+            <img src="assets/img/logo_ISEN.png" alt="ISEN Logo" width="60px">
         </div>
     </footer>
 </body>
