--- a/carte.html
+++ b/carte.html
@@ -66,7 +66,7 @@
                         <th>remarquable</th>
                         <th>lat</th>
                         <th>longi</th>
-                        <th></th>
+                        <th>btn</th>
                     </tr>
                 </thead>
                 <tbody>
