--- a/ajout.html
+++ b/ajout.html
@@ -68,11 +68,11 @@
                     type="checkbox"
                     id="remarquable"
                     name="remarquable"
-                    value="oui" />
+                    value="Oui" />
                 <label for="remarquable">
                 remarquable 
                 </label>
-                
+
                 <button type="submit">Ajouter l'Arbre</button>
             </form>  
         </main>    
