--- a/ajout.html
+++ b/ajout.html
@@ -41,7 +41,7 @@
             </div>
 
             <div class="form_ajout">
-                <form id="ajoutArbre" onsubmit="setRemarkableValue(event)">
+                <form id="ajoutArbre">
                     <h2>Renseigner un nouvel arbre</h2>
                     <input type="text" id="espece" name="espece" placeholder="Espèce" required>
             
