--- a/ajout.html
+++ b/ajout.html
@@ -47,13 +47,13 @@
             
                     <p>Tailles</p>
                     <div class="taille_form">
-                        <input type="number" id="haut_tot" name="haut_tot" placeholder="Totale" required>
-                        <input type="number" id="haut_tronc" name="haut_tronc" placeholder="Tronc" required>
-                        <input type="number" id="diam_tronc" name="diam_tronc" placeholder="Diamètre" required>
+                        <input type="number" id="haut_tot" name="haut_tot" placeholder="Totale" required step="any">
+                        <input type="number" id="haut_tronc" name="haut_tronc" placeholder="Tronc" required step="any">
+                        <input type="number" id="diam_tronc" name="diam_tronc" placeholder="Diamètre" required step="any">
                     </div>
 
-                    <input type="number" id="lat" name="lat" placeholder="Latitude" required>
-                    <input type="number" id="longi" name="longi" placeholder="Longitude" required>
+                    <input type="number" id="lat" name="lat" placeholder="Latitude" required  step="any">
+                    <input type="number" id="longi" name="longi" placeholder="Longitude" required step="any">
                     
                     <select id="fk_arb_etat" name="fk_arb_etat" required>
                         <option value="0">fk_arb_etat</option>
