--- a/ajout.html
+++ b/ajout.html
@@ -34,7 +34,7 @@
         </nav>
  
         <main>
-
+            <h1>Ajouter un arbre</h1>
             <div class="form_ajout">
                 <form id="ajoutArbre">
                     <h2>Renseigner un nouvel arbre</h2>
