--- a/ajout.html
+++ b/ajout.html
@@ -47,8 +47,12 @@
                         <input type="number" id="diam_tronc" name="diam_tronc" placeholder="Diamètre" required step="any">
                     </div>
 
-                    <input type="number" id="lat" name="lat" placeholder="Latitude" required  step="any">
-                    <input type="number" id="longi" name="longi" placeholder="Longitude" required step="any">
+                    <div class="coord_form">
+                        <p>Coordonnées</p>
+                        <input type="number" id="lat" name="lat" placeholder="Latitude" required  step="any">
+                        <input type="number" id="longi" name="longi" placeholder="Longitude" required step="any">
+                    </div>
+                 
                     
                     <select id="fk_arb_etat" name="fk_arb_etat" required>
                         <option value="0">fk_arb_etat</option>
