--- a/prediction.html
+++ b/prediction.html
@@ -33,7 +33,10 @@
         </nav>
  
         <main>
-        
+        <div class="age">
+            <h1>Prédiction de l'âge d'un arbre</h1>
+            <p id="valueage"></p>
+        </div>
         </main>    
 
         <footer>
