assoul le scritp 3 ca marche

--- a/prediction.html
+++ b/prediction.html
@@ -37,6 +37,10 @@
             <h1>Prédiction de l'âge d'un arbre</h1>
             <p id="valueage"></p>
         </div>
+        <div class="risque">
+            <h1>Prédiction du risque pour un arbre</h1>
+            <p id="valuerisque"></p>
+        </div>
         </main>    
 
         <footer>
