--- a/index_accueil.html
+++ b/index_accueil.html
@@ -25,10 +25,19 @@
         <div class="content">
             <h1>Population arboré de Saint-Quentin</h1>
             <p>Bienvenue sur le site présentant les arbres de Saint-Quentin. Petite ville située dans le département de l'Aisne en région Hauts-de-France, comptant 55 000 habitants riche en histoire et en patrimoine.</p>
-            <button class="cta-btn">En savoir plus</button>
+            <a href="carte.html"><button class="cta-btn">Visualiser les arbres</button></a>
         </div>
     </header>
     
+    <main>
+        <h2>Projet BigData - IA - WEB 2024</h2>
+        <div class="image_card">
+            <img src="assets/img/logo_ISEN.png" alt="ISEN">
+            <p>X</p>
+            <img src="assets/img/Logo-Saint-Quentin.jpg" alt="saint-quentin">
+        </div>
+    </main>
+
     <footer>
         <div class="footer_left">
             <p>Copyright © 2024 Helary Ewen | Timoté Chimienti. All rights reserved.</p>
