--- a/index_accueil.html
+++ b/index_accueil.html
@@ -36,6 +36,21 @@
             <p>X</p>
             <img src="assets/img/Logo-Saint-Quentin.jpg" alt="saint-quentin">
         </div>
+
+        <div class="desc_project">
+            <div class="bigdata">
+                <h3>Partie Big Data</h3>
+                <p>Samaine 1</p>
+            </div>
+            <div class="ia">
+                <h3>Partie IA</h3>
+                <p>Samaine 2</p>
+            </div>
+            <div class="web">
+                <h3>Partie WEB</h3>
+                <p>Samaine 3</p>
+            </div>
+        </div>
     </main>
 
     <footer>
