--- a/index_accueil.html
+++ b/index_accueil.html
@@ -29,12 +29,13 @@
         </div>
     </header>
     
-    <main>
-        <h2>Projet BigData - IA - WEB 2024</h2>
+    <main class="main_accueil">
+        <h1>Projet A3 2024</h1>
+        <h2>BigData - IA - WEB</h2>
         <div class="image_card">
-            <img src="assets/img/logo_ISEN.png" alt="ISEN">
+            <img src="assets/img/logo_ISEN.png" alt="ISEN" width="200px">
             <p>X</p>
-            <img src="assets/img/Logo-Saint-Quentin.jpg" alt="saint-quentin">
+            <img src="assets/img/Logo-Saint-Quentin.jpg" alt="saint-quentin" width="200px">
         </div>
 
         <div class="desc_project">
