--- a/index_accueil.html
+++ b/index_accueil.html
@@ -31,24 +31,32 @@
     
     <main class="main_accueil">
         <h1>Projet A3 2024</h1>
-        <h2>BigData - IA - WEB</h2>
+
         <div class="image_card">
             <img src="assets/img/logo_ISEN.png" alt="ISEN" width="300px">
             <img src="assets/img/Logo-Saint-Quentin.jpg" alt="saint-quentin" width="300px">
         </div>
 
-        <div class="desc_project">
-            <div class="bigdata">
-                <h3>Partie Big Data</h3>
-                <p>Samaine 1</p>
+        <h2>BigData - IA - WEB</h2>
+        
+        <div>
+            <div class="project_desc">
+                <p></p>
             </div>
-            <div class="ia">
-                <h3>Partie IA</h3>
-                <p>Samaine 2</p>
-            </div>
-            <div class="web">
-                <h3>Partie WEB</h3>
-                <p>Samaine 3</p>
+
+            <div class="desc_project">
+                <div class="part_card_project">
+                    <h3>Partie Big Data</h3>
+                    <p>Samaine 1</p>
+                </div>
+                <div class="part_card_project">
+                    <h3>Partie IA</h3>
+                    <p>Samaine 2</p>
+                </div>
+                <div class="part_card_project">
+                    <h3>Partie WEB</h3>
+                    <p>Samaine 3</p>
+                </div>
             </div>
         </div>
     </main>
