--- a/index_accueil.html
+++ b/index_accueil.html
@@ -39,24 +39,23 @@
 
         <h2>BigData - IA - WEB</h2>
         
-        <div>
-            <div class="project_desc">
-                <p></p>
-            </div>
+        
+        <div class="project_desc">
+            <p>Le but du projet est d'étudier la Population arborée de Saint-Quentin</p>
+        </div>
 
-            <div class="desc_project">
-                <div class="part_card_project">
-                    <h3>Partie Big Data</h3>
-                    <p>Samaine 1</p>
-                </div>
-                <div class="part_card_project">
-                    <h3>Partie IA</h3>
-                    <p>Samaine 2</p>
-                </div>
-                <div class="part_card_project">
-                    <h3>Partie WEB</h3>
-                    <p>Samaine 3</p>
-                </div>
+        <div class="desc_project">
+            <div class="part_card_project">
+                <h3>Partie Big Data</h3>
+                <p>Cette partie constiste a traiter, annalyser et nettoyer les données récupérées sur le site data-gouv.fr.</p>
+            </div>
+            <div class="part_card_project">
+                <h3>Partie IA</h3>
+                <p>Une fois le fichier traité et nettoyé récupérer, le but est de prédire l'age exact des arbres et prédire leurs chances de tomber en cas de tempête</p>
+            </div>
+            <div class="part_card_project">
+                <h3>Partie WEB</h3>
+                <p>Pour finir, nous avons afficher tous nos résultats sur ce site internet.</p>
             </div>
         </div>
     </main>
