--- a/ajout.html
+++ b/ajout.html
@@ -37,6 +37,8 @@
                 <form id="ajoutArbre">
                     <h2>Ajouter un arbre</h2>
                     <input type="text" id="espece" name="espece" placeholder="Espèce" required>
+                    <!-- Conteneur pour les suggestions -->
+                    <div class="autocomplete-items" style="display: none;"></div>
             
                     <p>Tailles</p>
                     <div class="taille_form">
