--- a/index_accueil.html
+++ b/index_accueil.html
@@ -17,7 +17,7 @@
             <a href="index_accueil.html">Accueil</a>
             <a href="carte.html">Carte</a>
             <a href="ajout.html">Ajouter un arbre</a>
-            <a href=""><button class="login-btn">Se connecter</button></a>
+            <a href="connexion.php"><button class="login-btn">Se connecter</button></a>
         </div> 
     </nav>
 
