--- a/ajout.html
+++ b/ajout.html
@@ -79,8 +79,18 @@
                     </div>
     
                     <button type="submit">Ajouter l'arbre</button>  
-                </form>  
+                </form> 
             </div>
+
+            <div id="popup" class="hidden">
+                <div class="popup-content">
+                    <div class="spinner"></div>
+                    <p>Validation en cours...</p>
+                </div>
+            </div>
+        
+            <script src="popup.js"></script>
+
         </main>    
 
         <footer>
