--- a/ajout.html
+++ b/ajout.html
@@ -89,7 +89,7 @@
                 </div>
             </div>
         
-            <script src="popup.js"></script>
+            <script src="js/popup.js"></script>
 
         </main>    
 
