--- a/ajout.html
+++ b/ajout.html
@@ -84,8 +84,8 @@
 
             <div id="popup" class="hidden">
                 <div class="popup-content">
-                    <div class="spinner"></div>
-                    <p>Validation en cours...</p>
+                    <div class="tree"><img src="assets/img/logo_web_project.jpg" alt=""></div>
+                    <p>arbre ajouté</p>
                 </div>
             </div>
         
