--- a/ajout.html
+++ b/ajout.html
@@ -84,7 +84,7 @@
 
             <div id="popup" class="hidden">
                 <div class="popup-content">
-                    <div class="tree"><img src="assets/img/logo_web_project.jpg" alt=""></div>
+                    <img src="assets/img/logo_web_project.jpg" alt="Arbre en rotation" class="tree-image">
                     <p>arbre ajouté</p>
                 </div>
             </div>
