--- a/prediction.html
+++ b/prediction.html
@@ -32,6 +32,8 @@
         </nav>
  
         <main>
+        <div id="map" style="width: 40%; height: 100vh;"></div>
+
         <div class="age">
             <h1>Prédiction de l'âge d'un arbre</h1>
             <p id="valueage"></p>
