--- a/prediction.html
+++ b/prediction.html
@@ -14,6 +14,9 @@
 
         <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
+        <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" />
+        <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
+
         <script src="js/ajax.js" defer></script>
         <script src="js/preds.js" defer></script>
 
