--- a/prediction.html
+++ b/prediction.html
@@ -34,17 +34,19 @@
             </div> 
         </nav>
  
-        <main>
-        <div id="map" style="width: 40%; height: 100vh;"></div>
+        <main class="predict_main">
+            <div id="map" style="width: 50%; height: 100vh;"></div>
 
-        <div class="age">
-            <h1>Prédiction de l'âge d'un arbre</h1>
-            <p id="valueage"></p>
-        </div>
-        <div class="risque">
-            <h1>Prédiction du risque pour un arbre</h1>
-            <p id="valuerisque"></p>
-        </div>
+            <div class="prediction">
+                <div class="age">
+                    <h1>Prédiction de l'âge d'un arbre</h1>
+                    <p id="valueage"></p>
+                </div>
+                <div class="risque">
+                    <h1>Prédiction du risque pour un arbre</h1>
+                    <p id="valuerisque"></p>
+                </div>
+            </div>
         </main>    
 
         <footer>
