--- a/prediction.html
+++ b/prediction.html
@@ -38,11 +38,11 @@
             <div id="map" style="width: 40%; height: 80vh;"></div>
 
             <div class="prediction">
-                <div class="age">
+                <div class="card">
                     <h1>Prédiction de l'âge d'un arbre</h1>
                     <p id="valueage"></p>
                 </div>
-                <div class="risque">
+                <div class="card">
                     <h1>Prédiction du risque pour un arbre</h1>
                     <p id="valuerisque"></p>
                 </div>
