--- a/ajout.html
+++ b/ajout.html
@@ -37,7 +37,7 @@
                     <h2>Ajouter un arbre</h2>
                     <div id="autocomplete-container">
                         <!-- Champ de saisie avec autocomplétion -->
-                        <input type="text" id="autocomplete-input" placeholder="Sélectionnez une espèce">
+                        <input type="text" id="espece" placeholder="Sélectionnez une espèce">
                         
                         <!-- Suggestions (liste non ordonnée) -->
                         <div id="autocomplete-suggestions"></div>
