--- a/carte.html
+++ b/carte.html
@@ -46,12 +46,12 @@
             </div>
         </div>
 
-       
-        <select id="fk_arb_etat">
-            <option value="">fk_arb_etat</option>
+       <div class="selecttab">
+            <select id="fk_arb_etat">
+                <option value="">fk_arb_etat</option>
 
-        </select>
-
+            </select>
+        </div>
         <div class="tabArbre">
             <table id="arbres" class="table table-striped">
                 <thead>
