--- a/carte.html
+++ b/carte.html
@@ -49,7 +49,9 @@
        <div class="selecttab">
             <select id="fk_arb_etat">
                 <option value="">fk_arb_etat</option>
-
+            </select>
+            <select id="especes">
+                <option value="">especes</option>
             </select>
         </div>
         <div class="tabArbre">
