--- a/ajout.html
+++ b/ajout.html
@@ -85,7 +85,7 @@
             <div id="popup" class="hidden">
                 <div class="popup-content">
                     <img src="assets/img/logo_web_project.jpg" alt="Arbre en rotation" class="tree-image">
-                    <p>arbre ajouté</p>
+                    <p>ajout de l'arbre ...</p>
                 </div>
             </div>
         
