--- a/index_accueil.html
+++ b/index_accueil.html
@@ -17,6 +17,7 @@
             <a href="index_accueil.html">Accueil</a>
             <a href="carte.html">Carte</a>
             <a href="ajout.html">Ajouter un arbre</a>
+            <a href="connexion.php" class="cta-btn"><button></button></a>
         </div> 
     </nav>
 
