--- a/ajout.html
+++ b/ajout.html
@@ -26,7 +26,7 @@
     
             <div class="right_nav">
                 <a href="index_accueil.html">Accueil</a>
-                <a href="carte.html">Carte</a>
+                <a href="carte.html">Visualisation</a>
                 <a href="ajout.html">Ajouter un arbre</a>
             </div> 
         </nav>
