--- a/index_accueil.html
+++ b/index_accueil.html
@@ -15,8 +15,9 @@
 
         <div class="right_nav">
             <a href="index_accueil.html">Accueil</a>
-            <a href="carte.html">Carte</a>
+            <a href="carte.html">Visualisation</a>
             <a href="ajout.html">Ajouter un arbre</a>
+            <a href="connexion.php"><button>Connexion</button></a>
         </div> 
     </nav>
 
