--- a/index_accueil.html
+++ b/index_accueil.html
@@ -17,7 +17,7 @@
             <a href="index_accueil.html">Accueil</a>
             <a href="carte.html">Visualisation</a>
             <a href="ajout.html">Ajouter un arbre</a>
-            <a href="connexion.php"><button class="login-btn">Connexion</button></a>
+            <a href="connexion.php"><button class="login-btn">Déconnexion</button></a>
         </div> 
     </nav>
 
