--- a/index_accueil.html
+++ b/index_accueil.html
@@ -24,7 +24,7 @@
     <header>
         <div class="content">
             <h1>Population arboré de Saint-Quentin</h1>
-            <p>Bienvenue sur le site présentant les arbres de Saint-Quentin. Petite ville située dans le département de l'Aisne en région Hauts-de-France, comptant 55 000 habitants riche en histoire et en patrimoine.</p>
+            <p id="content_text">Bienvenue sur le site présentant les arbres de Saint-Quentin. Petite ville située dans le département de l'Aisne en région Hauts-de-France, comptant 55 000 habitants riche en histoire et en patrimoine.</p>
             <a href="carte.html"><button class="cta-btn">Visualiser les arbres</button></a>
         </div>
     </header>
